deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: go-api
  namespace: dev
  labels:
    app: go-api
    project: my-k8s-infra

spec:
  replicas: 2

  selector:
    matchLabels:
      app: go-api

  template:
    metadata:
      labels:
        app: go-api

    spec:
      containers:
      - name: api-container
        image: whosthefunky/cicd-practice:latest

        ports:
        - containerPort: 8080

        livenessProbe:
          httpGet:
            path: /health
            port: 8080

          initialDelaySeconds: 5
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /health
            port: 8080

          initialDelaySeconds: 3
          periodSeconds: 5

        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
            
          limits:
            memory: "128Mi"
            cpu: "200m"
