service.yaml
apiVersion: v1
kind: Service
metadata:
  name: srv-api
  namespace: dev
spec:
  selector:
    app: go-api
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
