ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-api-ingress
  namespace: dev
spec:
  rules:
  - host: go-api.local        
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: srv-api     
            port:
              number: 8080
